...
    <string name="proses_transaksi">Proses transaksi</string>
    <string name="total_bayar">Total bayar</string>
    <string name="total_harga">Total harga</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="null_field">%1$s wajib diisi!</string>
    <string name="uang_kurang">Uang anda kurang!</string>
    <string name="konfirmasi_transaksi">Konfirmasi Transaksi</string>
    <string name="kembalian">Kembalian</string>
    <string name="submit_transaksi">Submit transaksi</string>
    <string name="reset">reset</string>
    <string name="jumat_27_maret_2020">Jumat, 27 Maret 2020</string>
    <string name="azmi">Paracetamol</string>
    <string name="paket">Kapsul</string>
    <string name="delete_confirmation">Yakin ingin menghapus data transaksi?</string>
    <string name="delete_all_confirmation">Yakin ingin menghapus semua data transaksi?</string>
    <string name="yes">Ya</string>
    <string name="no">Batal</string>
    <string name="success_delete">Data transaksi berhasil dihapus!</string>
    <string name="success_update">"Berhasil update transaksi!</string>
    <string name="success_insert">"Berhasil tambah transaksi!</string>
    <string name="edit_transaksi">Edit Transaksi</string>
    <string name="update_transaksi">Update Transaksi</string>
...
