...
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/imageView2"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_barbershop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/recyclerview_apotekbisa" />
        </RelativeLayout>
...
