...
                android:hint="@string/kembalian" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btn_submit_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF8C4A"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/update_transaksi"
            android:textColor="@android:color/white" />
...
